Fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: white) {
   html {
     color-scheme: dark;
   }
